manifests/network/Gateway-sfdr-me.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-cloudflare
  name: sfdr-me
  namespace: network
spec:
  gatewayClassName: cilium
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.sfdr.me'
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.sfdr.me'
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: letsencrypt-sfdr-me-tls
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      hostname: plex.sfdr.me
      name: plex
      port: 32400
      protocol: HTTP
